traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:4: error: value && is not a member of Int
    if (getX()==((getMondeLargeur()-1) && getY()==(getMondeHauteur()-1) ))
                                       ^